Fixed: Hotkey text might be invisible in some themes (white text on white background)

--- a/chrome/skin/overlay.css
+++ b/chrome/skin/overlay.css
@@ -45,6 +45,7 @@
   height: 30px;
   padding: 2px;
   background-color: white;
+  color: black;
   -moz-border-radius: 3px;
 }
 
@@ -69,6 +70,7 @@
   height: 45px;
   padding: 2px;
   background-color: white;
+  color: black;
   -moz-border-radius: 4px;
 }
 
